tests/neg-custom-args/captures/constructor-uses.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/constructor-uses.scala:17:21 -----------------------------
17 |  val _: () -> a.B = f // error
   |                     ^
   |                     Found:    (f : () ->{a.f²} a.B^{})
   |                     Required: () -> a.B
   |
   |                     Note that capability a.f² is not included in capture set {}.
   |
   |                     where:    f  is a value in method test
   |                               f² is a value in class A
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/constructor-uses.scala:24:19 -----------------------------
24 |  val _: () -> C = g // error
   |                   ^
   |                   Found:    (g : () ->{c} C^{})
   |                   Required: () -> C
   |
   |                   Note that capability c is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
